--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "dependencies": {
     "@expo/metro-runtime": "^4.0.0",
     "@react-native-picker/picker": "^2.9.0",
-    "expo": "^52.0.6",
+    "expo": "^52.0.7",
     "react-dom": "^18.3.1",
+    "react-native-image-picker": "^7.1.2",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "^0.19.13"
   }
